# karma-player

./: .dockerignore  .env.example  .env.production  .gitignore  BUNDLING_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  HYBRID_ARCHITECTURE_PLAN.md  INSTALL.txt  MACOS_INSTALL.txt  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  SETUP.md  demo.cast  docker-compose.yml  docker-entrypoint.sh  download_daemon.spec  karma-player.spec  pyproject.toml  release.sh  start-split.sh  start.sh  test-release.sh
.github/workflows/: build-release.yml
docs/: ARCHITECTURE.md  BUNDLING.md  CREATE_DEMO_GIF.md  DEPLOYMENT.md  GUI_ARCHITECTURE.md  IMPLEMENTATION.md  JACKETT_SETUP.md  PLUGIN_ARCHITECTURE.md  PROGRESS.md  VISION.md  YOUTUBE_DOWNLOAD_LAYER_ANALYSIS.md  macos-sleep-wake-fix.md
docs/legacy/: EPICS_TASKS.md  EPIC_3.md  mvp_vision.md  temp_tasks.md
gui/: .metadata  README.md  pubspec.yaml  test_fix.dart  test_parse.dart  test_transmission_torrents.py
gui/lib/: main.dart  (+2 more)
karma_player/: __init__.py  cli.py  cli_old.py  config.py  indexer_config.py  indexers.yaml  selection.py  splash.py
karma_player_legacy/: musicbrainz.py
scripts/: build-local-bundle.sh  bundle-transmission.sh  download-transmission-binaries.sh  setup-dev.sh
tests/: __init__.py  debug_adapter.py  debug_prefilter_vs_search.py  debug_search.py  test_api.py  test_cli.py  test_cli_integration.py  test_config.py  test_end_to_end.py  test_full_demo.py  test_musicbrainz.py  test_search.py  test_search_debug.py  test_selection.py  test_simple_search.py  test_sql_query.py  test_websocket.py
(+95 files in other folders)
